# amazon-price-tracker

./: .gitignore  README.md  logging.ini  logging_config.ini  pyproject.toml  requirements.txt
amazon_price_tracker/: __main__.py  constants.py  email_client.py  log_manager.py  scraper.py  settings.py
