[tool.poetry]
name = "amazon-price-tracker"
version = "0.1.0"
description = "Tracks the price of a product on Amazon and emails you when the price is less than your specified price."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "amazon_price_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
python-dotenv = "^0.21.0"
pydantic = {extras = ["email"], version = "^1.10.2"}


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.11.2"
mypy = "^0.991"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
